# rsd3_ROS_workcell_stack

./: .gitignore  README.md
KR6RSDWorkCell/: CollisionSetup.xml  CollisionSetup.xml~  SceneKu6.wc.xml  SceneKu6.wc.xml~  ScenePA10RoVi1.wc.xml~
KR6RSDWorkCell/Geometry/: Table.ac  Table.stl  conveyorBelt.ac  conveyorBelt.stl  foot.ac  foot.stl  workcellback.ac  workcellback.stl  workcellback_full.stl  workcellside.ac  workcellside.stl  workcellside_full.stl
KR6RSDWorkCell/KR6/: CollisionSetup.xml~  kr6.xml  kr6.xml~
KR6RSDWorkCell/KR6/Geometry/: KR6_base.ac  KR6_base.stl  KR6_link1.ac  KR6_link1.stl  KR6_link2.ac  KR6_link2.stl  KR6_link3.ac  KR6_link3.stl  KR6_link4.ac  (+5 more)
KR6RSDWorkCell/WSG50/: CollisionSetup.prox.xml  CollisionSetup.prox.xml~  WSG50.wc.xml  WSG50_backup.wc.xml~  WSG50_camera.wc.xml  WSG50_camera.wc.xml~
KukaROS/: CMakeLists.txt  package.xml
KukaROS/.svn/: wc.db
KukaROS/launch/: kukaros.launch
KukaROS/src/: PracticalSocket.cpp  kukaROS.cpp
KukaROS/srv/: getConfiguration.srv  getSafety.srv  setConfiguration.srv
RobWorkRunFiles/: RobWorkStudio.ini  runRobWorkStudio.sh
RobWorkRunFiles/IPs_synchronization/: get_ip_of.py  publish_my_ip_as.py  readme.txt  write_ip.php
WSG50/: CMakeCache.txt  Makefile  cmake_install.cmake
WSG50/.svn/: wc.db
WSG50/launch/: wsg_50_tcp.launch  wsg_50_tcp.launch~
WSG50/wsg_50/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
WSG50/wsg_50_common/: cmake_install.cmake
brick_check/: CMakeLists.txt  package.xml
brick_check/opencv/: test.cpp
brick_check/res/: test.py
brick_check/scripts/: publish.py
brick_check/src/: brick_check_node.cpp
brick_check/srv/: check_brick.srv
brick_client/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
brick_client/config/: head_camera.yaml
brick_client/src/: brick_client_node.cpp  brick_client_node.cpp~  detectBricks.h~  line_detection_node.cpp~
brick_detection/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
brick_detection/launch/: brick_detection.launch  brick_detection.launch~
brick_detection/src/: DetectBricks.cpp~  brick_detection_node.cpp  brick_detection_node.cpp~  detectBricks.h  detectBricks.h~
brick_detection/srv/: bricks.srv
hmi_support_workcell/: CMakeLists.txt  package.xml  readme.txt  setup.py
hmi_support_workcell/launch/: hmi_support_workcell.launch  test_hmi_plc.launch
hmi_support_workcell/src/: hmi_support_workcell_node.py
plc_comm/: CMakeLists.txt  package.xml
plc_comm/scripts/: PLC_client.py  PLC_server.py
plc_comm/srv/: plc_service.srv
res/: state_machine.cpp
robot_camera_launch/: CMakeLists.txt  package.xml
robot_camera_launch/config/: robot_camera.yaml
robot_camera_launch/launch/: robo_cam.launch  robo_cam.launch~
rsd_plugin/: CMakeLists.txt  package.xml
rsd_plugin-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  rsd_plugin.cbp
rsd_plugin-build/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
rsd_plugin-build/devel/: .catkin  .rosinstall  setup.sh
rsd_plugin-build/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
rsd_plugin-build/src/: moc_qtros.cxx  moc_qtros.cxx_parameters  moc_rsdPlugin.cxx  moc_rsdPlugin.cxx_parameters
rsd_plugin/src/: CameraPlugin.cpp~  CameraPlugin.hpp~  Configurations.h  qtmain.cpp~  qtros.cpp  qtros.h  rsdPlugin.cpp  rsdPlugin.hpp  rsdPlugin.h~  rsdPlugin.ui  state_machine.cpp  state_machine.h  state_machine_srv_calls.cpp  state_machine_srv_calls.h  uastrackerPlugin.cpp~  uastrackerPlugin.hpp~  ui_rsdPlugin.h  ui_uastrackerPlugin.h~
(+42 files in other folders)
