<?xml version="1.0"?>
<package>
  <name>hmi_support_workcell</name>
  <version>1.0.0</version>
  <description>Support package for the HTML UI - Workcell part (RSD 2015, Group 3)</description>

  <maintainer email="mabul14@student.sdu.dk">Martin Bulin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>msgs</run_depend>
</package>
